# template2

./: .env.example  .gitignore  AGENTS.md  QUICKSTART.md  README.md  docker-compose.yml
.github/: copilot-instructions.md
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260101_0000_0001_baseline_schema.py  20260102_0000_0002_async_subsystems.py
backend/src/: __init__.py  config.py  database.py  main.py  rate_limit.py  telemetry.py
backend/src/api/routes/: auth.py  dev.py  documents.py  internal.py  jobs.py  projects.py
backend/src/db/: __init__.py  soft_delete.py
backend/src/dependencies/: __init__.py  auth.py  internal_auth.py
backend/src/graph/: __init__.py  constraints.py  driver.py  session.py
backend/src/graph/repositories/: __init__.py  project_graph_repository.py
backend/src/models/: __init__.py  document.py  job.py  mixins.py  project.py  quota.py  task.py
backend/src/repositories/: __init__.py  document_repository.py  job_repository.py  project_repository.py
backend/src/services/: __init__.py  ai_service.py  auth_service.py  document_extraction.py  email_service.py  graph_projection.py  quota_service.py  scheduler.py  task_queue.py  worker.py
backend/src/utils/: logging.py  normalization.py
backend/tests/: conftest.py
backend/tests/entrypoint/: __init__.py  test_entrypoint_contract.py
backend/tests/integration/: __init__.py  test_async_subsystems.py  test_project_repository.py
backend/tests/unit/: test_auth_guards.py  test_config.py  test_graph_repository.py  test_health.py  test_internal_auth.py  test_normalization.py
docs/: deployment.md
firebase/: .firebaserc  Dockerfile
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
observability/: otel-collector-config.yaml
plans/: analytics-architecture.md  background-jobs.md  document-processing-flow.md  graph-database-architecture.md
scripts/: dev-test.sh  init-db.sql  run-tests.sh  seed-dev-user.sh  sync-config.sh  validate-deploy-config.sh
terraform-mvp/: README.md  cloudrun.tf  database.tf  iam.tf  main.tf  network.tf  outputs.tf  registry.tf  secrets.tf  tasks.tf  variables.tf  versions.tf
(+72 files in other folders)
